# hello-tts

./: .gitignore  README.md  README_MULTILINGUAL.md  build.bat  build.sh  run.bat  run.sh  run_multilingual.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml
doc/: gtts.txt
hello-tts-dart/: README.md  build.sh  pubspec.yaml  test_google.dart
hello-tts-dart/lib/: audio_player.dart  config_manager.dart  hello_tts.dart  tts_processor.dart
hello-tts-dart/test/: tts_test.dart
hello-tts-java/: README.md  build.sh  pom.xml
hello-tts-java/src/main/java/org/feuyeux/edgetts/: HelloTTS.java  MultilingualDemo.java
hello-tts-java/src/main/java/org/feuyeux/tts/: HelloMultilingual.java  HelloTTS.java
hello-tts-java/src/main/resources/: logback.xml
hello-tts-java/src/test/java/com/example/hellotts/: AudioPlayerTest.java  EdgeTtsProcessorTest.java  VoiceIntegrationTest.java  VoiceTest.java
hello-tts-python/: README.md  __init__.py  audio_player.py  config_manager.py  hello_multilingual.py  hello_tts.py  multilingual_demo.py  requirements.txt  speed_test.py  tts.py  utils.py  voice.py
hello-tts-python/backends/edge/: tts_client.py
hello-tts-python/backends/google/: __init__.py  tts_client.py
hello-tts-rust/: Cargo.toml  README.md  build.sh
hello-tts-rust/examples/: hello_multilingual.rs  hello_tts.rs  multilingual_demo.rs
hello-tts-rust/src/: audio_player.rs  config.rs  config_manager.rs  lib.rs  main.rs  models.rs  tts_client.rs
hello-tts-rust/src/backends/: edge.rs  google.rs  mod.rs
scripts/: dependency-config.json  update-dependencies.sh
shared/: tts_config.json
(+21 files in other folders)
